Bug 1498565 - Getting Firefox to stop  freezing when large file is loaded in Response tab r=Honza
When large files's Response tab in Network Devtools is open, Firefox freezes. This checks for file size & switches from SourceEditor to pre() when the files is too big.

Differential Revision: https://phabricator.services.mozilla.com/D12450

UltraBlame original commit: 980be6fb9210b7a29683d58c90e5b30145b0279e

--- a/devtools/client/netmonitor/src/assets/styles/NetworkDetailsPanel.css
+++ b/devtools/client/netmonitor/src/assets/styles/NetworkDetailsPanel.css
@@ -401,13 +401,8 @@ tbody
 {
 height
 :
-calc
-(
 100
 %
--
-4px
-)
 ;
 }
 .
@@ -918,6 +913,48 @@ overflow
 x
 :
 auto
+;
+}
+.
+network
+-
+monitor
+.
+tree
+-
+container
+.
+treeTable
+.
+editor
+-
+row
+-
+container
+.
+responseTextContainer
+{
+overflow
+-
+x
+:
+auto
+;
+width
+:
+100
+%
+;
+height
+:
+100
+%
+;
+padding
+-
+left
+:
+5px
 ;
 }
 .
